20241028 1831 - 프로젝트 마무리 수정중 머지

--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -348,7 +348,7 @@
                             </a>
                             <div class="dropdown-menu dropdown-menu-end dropdown-menu-animated profile-dropdown">
                                 <!-- item-->
-                                <a th:href="@{/}" class="dropdown-item">
+                                <a th:href="@{/api/admin/logout}" class="dropdown-item">
                                     <i class="ri-logout-box-line fs-18 align-middle me-1"></i>
                                     <span>Logout</span>
                                 </a>
@@ -443,7 +443,7 @@
                                         <a href="auth-register.html">Register</a>
                                     </li>
                                     <li>
-                                        <a th:href="@{/}">Logout</a>
+                                        <a th:href="@{/api/admin/logout}">Logout</a>
                                     </li>
                                     <li>
                                         <a href="auth-forgotpw.html">Forgot Password</a>
