--- a/src/main/resources/templates/admin/movie/register.html
+++ b/src/main/resources/templates/admin/movie/register.html
@@ -61,22 +61,22 @@
                     <div class="logo-topbar">
                         <!-- Logo light -->
                         <a th:href="@{/api/admin}" class="logo-light">
-                            <span class="logo-lg">
-                                <img th:src="@{/admin/assets/images/logo.png}" alt="logo">
-                            </span>
+                                <span class="logo-lg">
+                                    <img th:src="@{/images/movieLogo.jpg}" alt="logo">
+                                </span>
                             <span class="logo-sm">
-                                <img th:src="@{/admin/assets/images/logo-sm.png}" alt="small logo">
-                            </span>
+                                    <img th:src="@{/images/movieLogo.jpg}" alt="small logo">
+                                </span>
                         </a>
 
                         <!-- Logo Dark -->
                         <a th:href="@{/api/admin}" class="logo-dark">
-                            <span class="logo-lg">
-                                <img th:src="@{/admin/assets/images/logo-dark.png}" alt="dark logo">
-                            </span>
+                                <span class="logo-lg">
+                                    <img th:src="@{/images/movieLogo.jpg}" alt="dark logo">
+                                </span>
                             <span class="logo-sm">
-                                <img th:src="@{/admin/assets/images/logo-sm.png}" alt="small logo">
-                            </span>
+                                    <img th:src="@{/images/movieLogo.jpg}" alt="small logo">
+                                </span>
                         </a>
                     </div>
 
@@ -108,56 +108,20 @@
                 <ul class="topbar-menu d-flex align-items-center gap-3">
                     <li class="dropdown d-lg-none">
                         <a class="nav-link dropdown-toggle arrow-none" data-bs-toggle="dropdown" href="#" role="button"
-                            aria-haspopup="false" aria-expanded="false">
+                           aria-haspopup="false" aria-expanded="false">
                             <i class="ri-search-line fs-22"></i>
                         </a>
                         <div class="dropdown-menu dropdown-menu-animated dropdown-lg p-0">
                             <form class="p-3">
                                 <input type="search" class="form-control" placeholder="Search ..."
-                                    aria-label="Recipient's username">
+                                       aria-label="Recipient's username">
                             </form>
-                        </div>
-                    </li>
-
-                    <li class="dropdown">
-                        <a class="nav-link dropdown-toggle arrow-none" data-bs-toggle="dropdown" href="#" role="button"
-                            aria-haspopup="false" aria-expanded="false">
-                            <img th:src="@{/admin/assets/images/flags/us.jpg}" alt="user-image" class="me-0 me-sm-1" height="12">
-                            <span class="align-middle d-none d-lg-inline-block">English</span> <i
-                                class="ri-arrow-down-s-line d-none d-sm-inline-block align-middle"></i>
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-end dropdown-menu-animated">
-
-                            <!-- item-->
-                            <a href="javascript:void(0);" class="dropdown-item">
-                                <img th:src="@{/admin/assets/images/flags/germany.jpg}" alt="user-image" class="me-1" height="12"> <span
-                                    class="align-middle">German</span>
-                            </a>
-
-                            <!-- item-->
-                            <a href="javascript:void(0);" class="dropdown-item">
-                                <img th:src="@{/admin/assets/images/flags/italy.jpg}" alt="user-image" class="me-1" height="12"> <span
-                                    class="align-middle">Italian</span>
-                            </a>
-
-                            <!-- item-->
-                            <a href="javascript:void(0);" class="dropdown-item">
-                                <img th:src="@{/admin/assets/images/flags/spain.jpg}" alt="user-image" class="me-1" height="12"> <span
-                                    class="align-middle">Spanish</span>
-                            </a>
-
-                            <!-- item-->
-                            <a href="javascript:void(0);" class="dropdown-item">
-                                <img th:src="@{/admin/assets/images/flags/russia.jpg}" alt="user-image" class="me-1" height="12"> <span
-                                    class="align-middle">Russian</span>
-                            </a>
-
                         </div>
                     </li>
 
                     <li class="dropdown notification-list">
                         <a class="nav-link dropdown-toggle arrow-none" data-bs-toggle="dropdown" href="#" role="button"
-                            aria-haspopup="false" aria-expanded="false">
+                           aria-haspopup="false" aria-expanded="false">
                             <i class="ri-mail-line fs-22"></i>
                             <span class="noti-icon-badge badge text-bg-purple">4</span>
                         </a>
@@ -179,7 +143,7 @@
 
                                 <!-- item-->
                                 <a href="javascript:void(0);"
-                                    class="dropdown-item p-0 notify-item read-noti card m-0 shadow-none">
+                                   class="dropdown-item p-0 notify-item read-noti card m-0 shadow-none">
                                     <div class="card-body">
                                         <div class="d-flex align-items-center">
                                             <div class="flex-shrink-0">
@@ -200,7 +164,7 @@
 
                                 <!-- item-->
                                 <a href="javascript:void(0);"
-                                    class="dropdown-item p-0 notify-item read-noti card m-0 shadow-none">
+                                   class="dropdown-item p-0 notify-item read-noti card m-0 shadow-none">
                                     <div class="card-body">
                                         <div class="d-flex align-items-center">
                                             <div class="flex-shrink-0">
@@ -220,7 +184,7 @@
 
                                 <!-- item-->
                                 <a href="javascript:void(0);"
-                                    class="dropdown-item p-0 notify-item read-noti card m-0 shadow-none">
+                                   class="dropdown-item p-0 notify-item read-noti card m-0 shadow-none">
                                     <div class="card-body">
                                         <div class="d-flex align-items-center">
                                             <div class="flex-shrink-0">
@@ -240,7 +204,7 @@
 
                                 <!-- item-->
                                 <a href="javascript:void(0);"
-                                    class="dropdown-item p-0 notify-item read-noti card m-0 shadow-none">
+                                   class="dropdown-item p-0 notify-item read-noti card m-0 shadow-none">
                                     <div class="card-body">
                                         <div class="d-flex align-items-center">
                                             <div class="flex-shrink-0">
@@ -261,7 +225,7 @@
 
                                 <!-- item-->
                                 <a href="javascript:void(0);"
-                                    class="dropdown-item p-0 notify-item read-noti card m-0 shadow-none">
+                                   class="dropdown-item p-0 notify-item read-noti card m-0 shadow-none">
                                     <div class="card-body">
                                         <div class="d-flex align-items-center">
                                             <div class="flex-shrink-0">
@@ -282,7 +246,7 @@
 
                             <!-- All-->
                             <a href="javascript:void(0);"
-                                class="dropdown-item text-center text-primary text-decoration-underline fw-bold notify-item border-top border-light py-2">
+                               class="dropdown-item text-center text-primary text-decoration-underline fw-bold notify-item border-top border-light py-2">
                                 View All
                             </a>
 
@@ -291,7 +255,7 @@
 
                     <li class="dropdown notification-list">
                         <a class="nav-link dropdown-toggle arrow-none" data-bs-toggle="dropdown" href="#" role="button"
-                            aria-haspopup="false" aria-expanded="false">
+                           aria-haspopup="false" aria-expanded="false">
                             <i class="ri-notification-3-line fs-22"></i>
                             <span class="noti-icon-badge badge text-bg-pink">3</span>
                         </a>
@@ -373,7 +337,7 @@
 
                             <!-- All-->
                             <a href="javascript:void(0);"
-                                class="dropdown-item text-center text-primary text-decoration-underline fw-bold notify-item border-top border-light py-2">
+                               class="dropdown-item text-center text-primary text-decoration-underline fw-bold notify-item border-top border-light py-2">
                                 View All
                             </a>
 
@@ -394,47 +358,18 @@
 
                     <li class="dropdown">
                         <a class="nav-link dropdown-toggle arrow-none nav-user" data-bs-toggle="dropdown" href="#" role="button"
-                            aria-haspopup="false" aria-expanded="false">
-                            <span class="account-user-avatar">
-                                <img th:src="@{/admin/assets/images/users/avatar-1.jpg}" alt="user-image" width="32" class="rounded-circle">
-                            </span>
+                           aria-haspopup="false" aria-expanded="false">
+                                <span class="account-user-avatar">
+                                    <img th:src="${session.loginUser.getProfileImageUrl()}" alt="user-image" width="32" class="rounded-circle">
+                                </span>
                             <span class="d-lg-block d-none">
-                                <h5 class="my-0 fw-normal">Thomson <i
-                                        class="ri-arrow-down-s-line d-none d-sm-inline-block align-middle"></i></h5>
-                            </span>
+                                    <h5 class="my-0 fw-normal"> <i th:text="${session.loginUser.getNickname()}"
+                                                                   class="ri-arrow-down-s-line d-none d-sm-inline-block align-middle"></i></h5>
+                                </span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-end dropdown-menu-animated profile-dropdown">
                             <!-- item-->
-                            <div class=" dropdown-header noti-title">
-                                <h6 class="text-overflow m-0">Welcome !</h6>
-                            </div>
-
-                            <!-- item-->
-                            <a href="pages-profile.html" class="dropdown-item">
-                                <i class="ri-account-circle-line fs-18 align-middle me-1"></i>
-                                <span>My Account</span>
-                            </a>
-
-                            <!-- item-->
-                            <a href="pages-profile.html" class="dropdown-item">
-                                <i class="ri-settings-4-line fs-18 align-middle me-1"></i>
-                                <span>Settings</span>
-                            </a>
-
-                            <!-- item-->
-                            <a href="pages-faq.html" class="dropdown-item">
-                                <i class="ri-customer-service-2-line fs-18 align-middle me-1"></i>
-                                <span>Support</span>
-                            </a>
-
-                            <!-- item-->
-                            <a href="auth-lock-screen.html" class="dropdown-item">
-                                <i class="ri-lock-password-line fs-18 align-middle me-1"></i>
-                                <span>Lock Screen</span>
-                            </a>
-
-                            <!-- item-->
-                            <a th:href="@{/}" class="dropdown-item">
+                            <a th:href="@{/api/admin/logout}" class="dropdown-item">
                                 <i class="ri-logout-box-line fs-18 align-middle me-1"></i>
                                 <span>Logout</span>
                             </a>
@@ -451,22 +386,22 @@
 
             <!-- Brand Logo Light -->
             <a th:href="@{/api/admin}" class="logo logo-light">
-                <span class="logo-lg">
-                    <img th:src="@{/admin/assets/images/logo.png}" alt="logo">
-                </span>
+                    <span class="logo-lg">
+                        <img th:src="@{/images/movieLogo.jpg}" alt="logo">
+                    </span>
                 <span class="logo-sm">
-                    <img th:src="@{/admin/assets/images/logo-sm.png}" alt="small logo">
-                </span>
+                        <img th:src="@{/images/movieLogo.jpg}" alt="small logo">
+                    </span>
             </a>
 
             <!-- Brand Logo Dark -->
             <a th:href="@{/api/admin}" class="logo logo-dark">
-                <span class="logo-lg">
-                    <img th:src="@{/admin/assets/images/logo-dark.png}" alt="dark logo">
-                </span>
+                    <span class="logo-lg">
+                        <img th:src="@{/images/movieLogo.jpg}" alt="dark logo">
+                    </span>
                 <span class="logo-sm">
-                    <img th:src="@{/admin/assets/images/logo-sm.png}" alt="small logo">
-                </span>
+                        <img th:src="@{/images/movieLogo.jpg}" alt="small logo">
+                    </span>
             </a>
 
             <!-- Sidebar -left -->
@@ -477,7 +412,7 @@
                     <li class="side-nav-title">Main</li>
 
                     <li class="side-nav-item">
-                        <a href="index.html" class="side-nav-link">
+                        <a th:href="@{/api/admin}" class="side-nav-link">
                             <i class="ri-dashboard-3-line"></i>
                             <span class="badge bg-success float-end">9+</span>
                             <span> Dashboard </span>
@@ -492,9 +427,6 @@
                         </a>
                         <div class="collapse" id="sidebarPages">
                             <ul class="side-nav-second-level">
-                                <li>
-                                    <a th:href="@{/api/admin/pages-starter}">Starter Page</a>
-                                </li>
                                 <li>
                                     <a th:href="@{/api/admin/movie}">Movie</a>
                                 </li>
@@ -526,13 +458,13 @@
                         <div class="collapse" id="sidebarPagesAuth">
                             <ul class="side-nav-second-level">
                                 <li>
-                                    <a href="auth-login.html">Login</a>
+                                    <a th:href="@{/api/admin/auth-login}">Login</a>
                                 </li>
                                 <li>
                                     <a href="auth-register.html">Register</a>
                                 </li>
                                 <li>
-                                    <a href="auth-logout.html">Logout</a>
+                                    <a th:href="@{/api/admin/logout}">
                                 </li>
                                 <li>
                                     <a href="auth-forgotpw.html">Forgot Password</a>
@@ -550,6 +482,7 @@
             </div>
         </div>
         <!-- ========== Left Sidebar End ========== -->
+
 
         <!-- ============================================================== -->
         <!-- Start Page Content here -->
