--- a/src/main/resources/templates/admin/schedule/list.html
+++ b/src/main/resources/templates/admin/schedule/list.html
@@ -161,20 +161,20 @@
                             <!-- Logo light -->
                             <a th:href="@{/api/admin}" class="logo-light">
                                 <span class="logo-lg">
-                                    <img th:src="@{/admin/assets/images/logo.jpeg}" alt="logo">
+                                    <img th:src="@{/images/movieLogo.jpg}" alt="logo">
                                 </span>
                                 <span class="logo-sm">
-                                    <img th:src="@{/admin/assets/images/logo.jpeg}" alt="small logo">
+                                    <img th:src="@{/images/movieLogo.jpg}" alt="small logo">
                                 </span>
                             </a>
 
                             <!-- Logo Dark -->
                             <a th:href="@{/api/admin}" class="logo-dark">
                                 <span class="logo-lg">
-                                    <img th:src="@{/admin/assets/images/logo.jpeg}" alt="dark logo">
+                                    <img th:src="@{/images/movieLogo.jpg}" alt="dark logo">
                                 </span>
                                 <span class="logo-sm">
-                                    <img th:src="@{/admin/assets/images/logo.jpeg}" alt="small logo">
+                                    <img th:src="@{/images/movieLogo.jpg}" alt="small logo">
                                 </span>
                             </a>
                         </div>
@@ -215,42 +215,6 @@
                                     <input type="search" class="form-control" placeholder="Search ..."
                                            aria-label="Recipient's username">
                                 </form>
-                            </div>
-                        </li>
-
-                        <li class="dropdown">
-                            <a class="nav-link dropdown-toggle arrow-none" data-bs-toggle="dropdown" href="#" role="button"
-                               aria-haspopup="false" aria-expanded="false">
-                                <img th:src="@{/admin/assets/images/flags/us.jpg}" alt="user-image" class="me-0 me-sm-1" height="12">
-                                <span class="align-middle d-none d-lg-inline-block">English</span> <i
-                                    class="ri-arrow-down-s-line d-none d-sm-inline-block align-middle"></i>
-                            </a>
-                            <div class="dropdown-menu dropdown-menu-end dropdown-menu-animated">
-
-                                <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item">
-                                    <img th:src="@{/admin/assets/images/flags/germany.jpg}" alt="user-image" class="me-1" height="12"> <span
-                                        class="align-middle">German</span>
-                                </a>
-
-                                <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item">
-                                    <img th:src="@{/admin/assets/images/flags/italy.jpg}" alt="user-image" class="me-1" height="12"> <span
-                                        class="align-middle">Italian</span>
-                                </a>
-
-                                <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item">
-                                    <img th:src="@{/admin/assets/images/flags/spain.jpg}" alt="user-image" class="me-1" height="12"> <span
-                                        class="align-middle">Spanish</span>
-                                </a>
-
-                                <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item">
-                                    <img th:src="@{/admin/assets/images/flags/russia.jpg}" alt="user-image" class="me-1" height="12"> <span
-                                        class="align-middle">Russian</span>
-                                </a>
-
                             </div>
                         </li>
 
@@ -495,45 +459,16 @@
                             <a class="nav-link dropdown-toggle arrow-none nav-user" data-bs-toggle="dropdown" href="#" role="button"
                                aria-haspopup="false" aria-expanded="false">
                                 <span class="account-user-avatar">
-                                    <img th:src="@{/admin/assets/images/users/avatar-1.jpg}" alt="user-image" width="32" class="rounded-circle">
+                                    <img th:src="${session.loginUser.getProfileImageUrl()}" alt="user-image" width="32" class="rounded-circle">
                                 </span>
                                 <span class="d-lg-block d-none">
-                                    <h5 class="my-0 fw-normal">Thomson <i
-                                            class="ri-arrow-down-s-line d-none d-sm-inline-block align-middle"></i></h5>
+                                    <h5 class="my-0 fw-normal"> <i th:text="${session.loginUser.getNickname()}"
+                                                                   class="ri-arrow-down-s-line d-none d-sm-inline-block align-middle"></i></h5>
                                 </span>
                             </a>
                             <div class="dropdown-menu dropdown-menu-end dropdown-menu-animated profile-dropdown">
                                 <!-- item-->
-                                <div class=" dropdown-header noti-title">
-                                    <h6 class="text-overflow m-0">Welcome !</h6>
-                                </div>
-
-                                <!-- item-->
-                                <a href="pages-profile.html" class="dropdown-item">
-                                    <i class="ri-account-circle-line fs-18 align-middle me-1"></i>
-                                    <span>My Account</span>
-                                </a>
-
-                                <!-- item-->
-                                <a href="pages-profile.html" class="dropdown-item">
-                                    <i class="ri-settings-4-line fs-18 align-middle me-1"></i>
-                                    <span>Settings</span>
-                                </a>
-
-                                <!-- item-->
-                                <a href="pages-faq.html" class="dropdown-item">
-                                    <i class="ri-customer-service-2-line fs-18 align-middle me-1"></i>
-                                    <span>Support</span>
-                                </a>
-
-                                <!-- item-->
-                                <a href="auth-lock-screen.html" class="dropdown-item">
-                                    <i class="ri-lock-password-line fs-18 align-middle me-1"></i>
-                                    <span>Lock Screen</span>
-                                </a>
-
-                                <!-- item-->
-                                <a th:href="@{/}" class="dropdown-item">
+                                <a th:href="@{/api/admin/logout}" class="dropdown-item">
                                     <i class="ri-logout-box-line fs-18 align-middle me-1"></i>
                                     <span>Logout</span>
                                 </a>
@@ -551,20 +486,20 @@
                 <!-- Brand Logo Light -->
                 <a th:href="@{/api/admin}" class="logo logo-light">
                     <span class="logo-lg">
-                        <img th:src="@{/admin/assets/images/logo.png}" alt="logo">
+                        <img th:src="@{/images/movieLogo.jpg}" alt="logo">
                     </span>
                     <span class="logo-sm">
-                        <img th:src="@{/admin/assets/images/logo-sm.png}" alt="small logo">
+                        <img th:src="@{/images/movieLogo.jpg}" alt="small logo">
                     </span>
                 </a>
 
                 <!-- Brand Logo Dark -->
                 <a th:href="@{/api/admin}" class="logo logo-dark">
                     <span class="logo-lg">
-                        <img th:src="@{/admin/assets/images/logo-dark.png}" alt="dark logo">
+                        <img th:src="@{/images/movieLogo.jpg}" alt="dark logo">
                     </span>
                     <span class="logo-sm">
-                        <img th:src="@{/admin/assets/images/logo-sm.png}" alt="small logo">
+                        <img th:src="@{/images/movieLogo.jpg}" alt="small logo">
                     </span>
                 </a>
 
@@ -591,9 +526,6 @@
                             </a>
                             <div class="collapse" id="sidebarPages">
                                 <ul class="side-nav-second-level">
-                                    <li>
-                                        <a th:href="@{/api/admin/pages-starter}">Starter Page</a>
-                                    </li>
                                     <li>
                                         <a th:href="@{/api/admin/movie}">Movie</a>
                                     </li>
@@ -625,13 +557,13 @@
                             <div class="collapse" id="sidebarPagesAuth">
                                 <ul class="side-nav-second-level">
                                     <li>
-                                        <a href="auth-login.html">Login</a>
+                                        <a th:href="@{/api/admin/auth-login}">Login</a>
                                     </li>
                                     <li>
                                         <a href="auth-register.html">Register</a>
                                     </li>
                                     <li>
-                                        <a href="auth-logout.html">Logout</a>
+                                        <a th:href="@{/api/admin/logout}">Logout</a>
                                     </li>
                                     <li>
                                         <a href="auth-forgotpw.html">Forgot Password</a>
@@ -642,7 +574,6 @@
                                 </ul>
                             </div>
                         </li>
-
                     </ul>
                     <!--- End Sidemenu -->
 
