--- a/src/main/resources/templates/profile/wishlist.html
+++ b/src/main/resources/templates/profile/wishlist.html
@@ -63,7 +63,8 @@
                 <div class="text-content">
                     <div class="heading2 text-center">My Profile</div>
                     <div class="link flex items-center justify-center gap-1 caption1 mt-3">
-                        <a th:href="@{/}">Homepage</a>
+                        <a th:href="@{/}">Homepage |</a>
+                        <a th:href="@{/logout}"> Logout</a>
                         <i class="ph ph-caret-right text-sm text-secondary2"></i>
                         <!--<div class="text-secondary2 capitalize">My Account</div>-->
                     </div>
