--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -131,7 +131,7 @@
             headers: {
                 'Content-Type': 'application/json'
             },
-            data: JSON.stringify(user)
+            data: user
         })
             .then((response) => {
                 // HTTP 상태 코드가 200~299 범위일 때만 성공으로 간주
