--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -41,7 +41,8 @@
                 </div>
             </div>
         </div>
-    </header><section class="section-content pv12 bg-cover" th:data-bg-image="@{/images/coming-bg.jpg}">
+    </header>
+    <section class="section-content pv12 bg-cover" th:data-bg-image="@{/images/coming-bg.jpg}">
     <div class="container">
         <div class="row">
             <div class="col-sm-12 page-title mt5 mb5">
